--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -125,7 +125,7 @@ def SieveOfEratosthenes(n):
     while p * p <= n:
 
         # 如果 prime[p] 为True, 证明是质数
-        if prime[p] == True:
+        if prime[p]:
 
             # 更新 p * p + k * p 非质数
             for i in range(p * p, n+1, p):
@@ -452,6 +452,53 @@ def isSelfCrossing(d) -> bool:
 			and d[i] + d[i-4] >= d[i-2] and d[i-2] > d[i-4]:
 			return True
 	return False
+```
+
+
+### 车站建造问题
+
+[车站建造问题_牛客题霸_牛客网](https://www.nowcoder.com/practice/9fededa1b63a41798e5d43344d7bf216?tpId=110&tqId=33507&rp=1&difficulty=&judgeStatus=&tags=/question-ranking)
+
+有n个村庄排在一条公路上，村庄之间的距离通过一个数组给出，现在需要为这n个村庄修建车站，但是要求相邻车站的距离必须为1或者某个质数，求最小修建的车站数。
+
+该问题需要用到哥德巴赫猜想，
+
+大于 2 的偶数可以分解为两个质数
+
+大于 7 的奇数可以分解为三个质数之和，由于要求最小修建的车站数，所以对于奇数可以将其先减去2，再判断是否为质数，如果是，需要两个车站，如果不是需要三个车站
+
+```python
+def solve(n , a: List):
+	def is_prime(x):
+		if x == 1:
+			return True
+		if x == 2 or x == 3:
+			return True
+		
+		if x % 2 == 0 or x % 3 == 0:
+			return False
+		
+		i = 5
+
+		while i <= int(x ** 0.5):
+			if x % i == 0 or x % (i + 2) == 0:
+				return False
+			i += 6
+		return True
+
+	cnt = 1
+	for i in range(1, n):
+		dist = a[i] - a[i-1]
+		if is_prime(dist):
+			cnt += 1
+		elif dist % 2 == 0:
+			cnt += 2
+		else:
+			if is_prime(dist - 2):
+				cnt += 2
+			else:
+				cnt += 3
+	return cnt
 ```
 
 
@@ -7958,7 +8005,7 @@ def maxNumber(nums1: List[int], nums2: List[int], k: int):
 			j += 1
 		return merged
 	
-	# 比较函数，
+	# 比较函数
 	def compare(ss1, idx1, ss2, idx2):
 		l1, l2 = len(ss1), len(ss2)
 		while idx1 < l1 and idx2 < l2:
@@ -8580,9 +8627,7 @@ def solve(gas, cost):
 [Find Length of a Linked List (Iterative and Recursive) - GeeksforGeeks](https://www.geeksforgeeks.org/find-length-of-a-linked-list-iterative-and-recursive/)
 
 ```python
-def getCount(self, head):
-	# code here
-	
+def getCount(self, head):	
 	count = 0
 	curr = head
 	while curr is not None:
@@ -8784,7 +8829,7 @@ def solve(head: ListNode, left, right):
         curr = next
         i += 1
     node.next = prev
-    # 如果后面（next）还有节点，先遍历到当前的最后一个节点，
+    # 如果后面（next）还有节点，先遍历到当前的最后一个节点，再将next加到后面
     if next is not None:
         while node.next is not None:
             node = node.next
@@ -8797,7 +8842,30 @@ def solve(head: ListNode, left, right):
 
 [25. K 个一组翻转链表 - 力扣（LeetCode）](https://leetcode.cn/problems/reverse-nodes-in-k-group/)
 
-每k个元素翻转一次链表
+每k个元素翻转一次链表，这里的翻转更复杂。下面以k=3为例，-1表示虚拟节点，p 表示前一个结点，c 表示当前节点，n 表示下一个结点
+
+```
+-1 -> 1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7      n 指向 c 的下一个结点
+ p    c    n
+-1 -> 1 2 -> 3 -> 4 -> 5 -> 6 -> 7         令 c 指向 n 的下一个结点 3
+ p    c n
+-1 -> 1 -> 3 -> 4 -> 5 -> 6 -> 7   1 <- 2  令n指向p的下一个结点 1
+p     c                            c    n
+-1 -> 2 -> 1 -> 3 -> 4 -> 5 -> 6 -> 7      令p 指向 n
+p     n    c
+
+-1 -> 2 -> 1 -> 3 -> 4 -> 5 -> 6 -> 7      n 指向 c 的下一个结点
+p          c    n 
+-1 -> 2 -> 1 3 -> 4 -> 5 -> 6 -> 7         c 和 n 均指向 n 的下一个结点
+p          c n
+-1 -> 2 -> 1 -> 4 -> 5 -> 6 -> 7    3 -> 2 n 指向p 的下一个结点 2
+p          c                        n     
+-1 -> 3 -> 2 -> 1 -> 4 -> 5 -> 6 -> 7      p 指向 n
+p     n         c
+
+最后更新 p = c，c = c.next 即可进入下一个翻转
+```
+
 
 ```python
 def reverseKGroup(head, k):
@@ -8811,9 +8879,9 @@ def reverseKGroup(head, k):
 	
 	while count >= k:
 		for i in range(k-1):
-			next = curr.next   # 保存下一个值
-			curr.next = next.next # 将curr的next指向再下一个
-			next.next = prev.next # 反转
+			next = curr.next      # 保存下一个结点
+			curr.next = next.next # 将curr的next指向下下个的结点
+			next.next = prev.next # 将下一个结点指向当前k个数据的头节点
 			prev.next = next      # 
 		
 		prev = curr
@@ -8885,7 +8953,7 @@ def countNodesInLoop(head):
 
 一种方法是先统计两个链表的长度，然后先遍历较长的链表，直到两个指针距离尾部的长度相等，然后一起遍历即可。
 
-第二种方法不直接统计两个链表的长度，而是隐含的让两个指针都经过两个链表，具体方法如下
+第二种方法不直接统计两个链表的长度，而是让两个指针都经过两个链表，具体方法如下
 
 1、让两个指针指向链表的头节点
 2、两个指针向后遍历，如果元素相等就返回找到的交点
@@ -9339,7 +9407,6 @@ def postorder_traversal(root: Node):
 
 一层一层的遍历
 
-
 ```python
 def levelOrder(root):
     if root is None:
@@ -9547,7 +9614,7 @@ def countNodes(root: Optional[TreeNode]) -> int:
 
 [662. 二叉树最大宽度 - 力扣（LeetCode）](https://leetcode.cn/problems/maximum-width-of-binary-tree/description/)
 
-该题也会计算None节点，所以需要考虑节点的位置，左节点 2 * i，右节点 2 * i+1
+使用层序遍历每一层，记录节点的位置，左节点 2 * i，右节点 2 * i+1
 
 ```python
 def solve(root):
@@ -9575,7 +9642,7 @@ def solve(root):
 
 [236. 二叉树的最近公共祖先 - 力扣（LeetCode）](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/description/)
 
-采用递归方法，分别在左子树和右子树中寻找p和q，如果左右子树都能找到，那么该节点就是最近公共祖先，如果在左子树找到p或q，右子树没有找到，返回的结果就是p或q，即p或q自己就是最近公共祖先（递归的性质保证是最近的）
+采用递归方法，分别在左子树和右子树中寻找 p 和 q，如果左右子树都能找到，那么该节点就是最近公共祖先，如果在左子树找到 p 或 q，右子树没有找到，返回的结果就是 p 或 q，即 p 或 q 自己就是最近公共祖先（递归的性质保证是最近的）
 
 ```python
 def solve(root, p, q):
@@ -9594,8 +9661,6 @@ def solve(root, p, q):
     if left is None and right:
         return right
 ```
-
-
 
 
 ### 对称树
@@ -9999,7 +10064,7 @@ def solve(root):
 
 
 ```python
-def findTargetNode(self, root: Optional[TreeNode], cnt: int) -> int:
+def findTargetNode(root: Optional[TreeNode], cnt: int):
 	def inorder(root):
 		if root is None:
 			return
@@ -10607,7 +10672,7 @@ class MyBst:
 
 并查集是一种树型的数据结构，用于处理一些不相交集合的合并及查询问题（即所谓的并、查）。比如说，我们可以用并查集来判断一个森林中有几棵树、某个节点是否属于某棵树等。
 
-并查集主要由一个整型数组 pre和两个函数 find( )、join( ) 构成。数组 pre 记录了每个点的前驱节点是谁，函数 find(x) 用于查找指定节点 x 属于哪个集合，函数 join(x,y) 用于合并两个节点 x 和 y 。
+并查集主要由一个整型数组 pre 和两个函数 find、join 构成。数组 pre 记录了每个点的前驱节点是谁，函数 find(x) 用于查找指定节点 x 属于哪个集合，函数 join(x,y) 用于合并两个节点 x 和 y 。
 
 find函数的实现
 
@@ -10767,7 +10832,7 @@ def getPermutation(n: int, k: int) -> str:
 
 [310. 最小高度树 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-height-trees/)
 
-选择树中任何一个节点作为根。当选择节点 `x` 作为根节点时，设结果树的高度为 `h` 。在所有可能的树中，具有最小高度的树（即，`min(h)`）被称为 **最小高度树** 。找到所有的 **最小高度树** 并按 **任意顺序** 返回它们的根节点标签列表。
+选择树中任何一个节点作为根。当选择节点 `x` 作为根节点时，设结果树的高度为 `h` 。在所有可能的树中，具有最小高度的树（即 `min(h)`）被称为 **最小高度树** 。找到所有的 **最小高度树** 并按 **任意顺序** 返回它们的根节点标签列表。
 
 如果采用暴力解法（BFS会超时，记忆化DFS会超空间）。考虑如下的解法假设 `[x,y]` 是树中最长路径 `maxdist` 对应的端点，那么最短路径肯定在最长路径中，并且最小高度为  $\left\lceil {{{maxdist} \over 2}} \right\rceil$
 
@@ -10837,6 +10902,8 @@ def findMinHeightTrees(n: int, edges: List[List[int]]):
 
 将序列进行重排使其位置完全发生改变，求出最大的序列
 
+对序列中的元素倒排序，每次选择最大的元素，如果这个元素和原本的位置不同就直接赋值，但是如果相同，就选择下一个最大值，并将当前最大值重新放回去
+
 ```python
 def largest_derangement(seq):
     n = len(seq)
@@ -10856,7 +10923,7 @@ def largest_derangement(seq):
         else:                   # 如果顺序相同，就取下一个最大值
             res[i] = pq[0]
             del pq[0]
-            pq.append(d)
+            pq.append(d)     # 重新放回最大值
     return res
 ```
 
@@ -11020,7 +11087,7 @@ def dijkstra(src):
 	
 		# 更新路径
 		for y in range(self.V):
-			if self.graph[x][y] > 0 and sptSet[y] == False and \
+			if self.graph[x][y] > 0 and not sptSet[y] and \
 					dist[y] > dist[x] + self.graph[x][y]:
 				dist[y] = dist[x] + self.graph[x][y]
 ```
@@ -11392,7 +11459,7 @@ def kruskals_mst(V, edges):
 
 [Total number of Spanning Trees in a Graph - GeeksforGeeks](https://www.geeksforgeeks.org/total-number-spanning-trees-graph/)
 
-有计算公式
+
 
 
 ### 拓扑排序
@@ -11515,7 +11582,7 @@ def findAllTopologicalOrders(graph, path, discovered, N):
 
 + 如果没有可移动的路径，则将所在节点加入到栈中，并返回。
 
-顺序的思考这个问题时，会容易进入死胡同（指进入了一个结点，该结点没有连接其它结点的边，但是还没有访问完所有的边）。注意到只有入度和出度相差1 的结点会成为死胡同结点，而这种结点是最后才访问到的，因此可以改变入栈的规则，当我们遍历完一个节点所连的所有节点后，才将该节点入栈（即逆序入栈）。
+顺序的思考这个问题时，会容易进入死胡同（指进入了一个结点，该结点没有连接其它结点的边，但是还没有访问完所有的边）。注意到只有入度和出度相差 1 的结点会成为死胡同结点，而这种结点是最后才访问到的，因此可以改变入栈的规则，当我们遍历完一个节点所连的所有节点后，才将该节点入栈（即逆序入栈）。
 
 对于当前节点而言，从它的每一个非「死胡同」分支出发进行深度优先搜索，都将会搜回到当前节点。而从它的「死胡同」分支出发进行深度优先搜索将不会搜回到当前节点。也就是说当前节点的死胡同分支将会优先于其他非「死胡同」分支入栈。
 
@@ -11632,13 +11699,13 @@ def solve(adj, V):
     print(res)
 ```
 
-
 使用 Tarjan 算法求解关节点的数量，在 DFS 树中，如果一个顶点 u 为关键点，则有下面两个条件
 
 + u 是 DFS 树的根，并且至少有两个子节点
-+ u 不是DFS树的根，有一个子节点 v，使得以 v 为根的子树中没有一个节点存在与 u 的祖先节点相连的边。
++ u 不是 DFS 树的根，有一个子节点 v，使得以 v 为根的子树中没有一个节点存在与 u 的祖先节点相连的边。
 
 ![](https://media.geeksforgeeks.org/wp-content/uploads/20230801170641/example-1drawio.png)
+
 借助上面的条件，
 
 + 在DFS 遍历时，维持一个parent数组，`parent[u]` 保存 `u` 节点的父节点
@@ -11671,7 +11738,7 @@ def findPoints(adj, u, visited, disc, low, time, parent, isAP):
             if parent != -1 and low[v] >= disc[u]:
                 isAP[u] = 1
                 
-        # 更新 u 的low值
+        # 更新 u 的 low 值
         elif v != parent:
             low[u] = min(low[u], disc[v])
     
@@ -11733,9 +11800,9 @@ def criticalConnections(n: int, connections):
 
 [934. 最短的桥 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-bridge/description/)
 
-已知在一张图中包含两个岛，每个岛由相连（上下左右）的 1 组成，可以转变一些0为1，求出使这两座岛相邻的最小转变次数
+已知在一张图中包含两个岛，每个岛由相连（上下左右）的 1 组成，可以转变一些 0 为 1，求出使这两座岛相邻的最小转变次数。
 
-先记录下一座岛屿的全部点，然后逐层向外扩张，直至四周出现另一座岛，为了避免重复访问，将先记录的岛全部变为2。
+先记录下一座岛屿的全部点，然后逐层向外扩张，直至四周出现另一座岛，为了避免重复访问，将先记录的岛全部变为 2。
 
 ```python
 def shortestBridge(self, grid: List[List[int]]) -> int:
@@ -11775,7 +11842,7 @@ def shortestBridge(self, grid: List[List[int]]) -> int:
 
 [Count number of trees in a forest - GeeksforGeeks](https://www.geeksforgeeks.org/count-number-trees-forest/)
 
-对每个未访问的节点都进行DFS，计数加1，表示存在一个树
+对每个未访问的节点都进行DFS，计数加1，表示存在一个树。
 
 如果只有一棵树，那么一次DFS就能找到；如果有多棵树，那么一次DFS后还有未访问的节点，这时候再DFS一次
 
@@ -11814,8 +11881,7 @@ def cloneGraph(src: GraphNode) -> GraphNode:
 			# 检查该节点是否已被创建
 			if neighbor not in m:
 				# 没有的话需要创建
-				node = GraphNode()
-				node.val = neighbor.val
+				node = GraphNode(neighbor.val)
 				m[neighbor] = node
 				q.append(neighbor)
 
@@ -11830,7 +11896,7 @@ def cloneGraph(src: GraphNode) -> GraphNode:
 
 [Introduction to Graph Coloring - GeeksforGeeks](https://www.geeksforgeeks.org/graph-coloring-applications/)
 
-用m种颜色为图顶点涂色，要求相邻顶点不同色，采用回溯法，注意求最少颜色是一个NP完全问题
+用 m 种颜色为图顶点涂色，要求相邻顶点不同色，采用回溯法，注意求最少颜色是一个NP完全问题
 
 ```python
 def graph_coloring(graph, m):
@@ -11846,7 +11912,7 @@ def graph_coloring(graph, m):
         if idx == n:
             return True
         res = False
-        # 尝试m种颜色
+        # 尝试 m 种颜色
         for i in range(m):
             if issafe(idx, i):
                 colors[idx] = i  # 填上第 i 种颜色
@@ -11871,7 +11937,6 @@ def greedy_solve(adj, V):
     available = [True] * V  # 可用的颜色
 
     for i in range(1, V):
-        
         for n in adj[i]:
             if result[n] != -1:  # 已经涂过色的顶点
                 available[result[n]] = False
@@ -12210,9 +12275,9 @@ def minMutation(startGene: str, endGene: str, bank: List[str]) -> int:
 
 [542. 01 矩阵 - 力扣（LeetCode）](https://leetcode.cn/problems/01-matrix/description/)
 
-一个矩阵中只有0和1，求所有元素到1的距离。
+一个矩阵中只有 0 和 1，求所有元素到 1 的距离。
 
-该问题为多源BFS，定义一个dist矩阵，遍历原矩阵将所有的0塞入队列中，并设置`dist[i][j]` 为0，然后进行多源的BFS，对于所有的 0 遍历上下左右四个方向，更新到 1 的距离
+该问题为多源 BFS，定义一个 dist 矩阵，遍历原矩阵将所有的 0 塞入队列中，并设置`dist[i][j]` 为0，然后进行多源的 BFS，对于所有的 0 遍历上下左右四个方向，更新到 1 的距离
 
 ```python
 def updateMatrix(mat: List[List[int]]) -> List[List[int]]:
@@ -12318,7 +12383,7 @@ def distanceK(root: TreeNode, target: TreeNode, k: int) -> List[int]:
 
 [864. 获取所有钥匙的最短路径 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-path-to-get-all-keys/description/)
 
-这个题目和常规的BFS有一些差别，由于引入了 keys 这个变量，因此需要将keys也加入到 visited 矩阵中，为了方便表示，将keys用二进制表示，在选择下一个位置时，如果遇到钥匙，需要额外初始化一个变量来保存keys，防止四个方向出现多个key
+这个题目和常规的BFS有一些差别，由于引入了 keys 这个变量，因此需要将 keys 也加入到 visited 矩阵中，为了方便表示，将keys用二进制表示，在选择下一个位置时，如果遇到钥匙，需要额外初始化一个变量来保存keys，防止四个方向出现多个key
 
 ```python
 def shortestPathAllKeys(grid: List[str]) -> int:
@@ -12327,9 +12392,9 @@ def shortestPathAllKeys(grid: List[str]) -> int:
 	n = len(grid[0])
 	dirs = [[1, 0], [-1, 0], [0, 1], [0, -1]]
 	queue = deque()
-	k = 0   # 先初始化 k 为没有获得key的状态
+	k = 0   # 先初始化 k 为没有获得 key 的状态
 	
-	# 设置 k 为全部的key都获取时的状态
+	# 设置 k 为全部的 key 都获取时的状态
 	for i in range(m):
 		for j in range(n):
 			if grid[i][j] == "@":
@@ -12810,6 +12875,7 @@ def solve_dp(profit, weight, N, W):
 首先观察表格的最后一列，该列对应的是背包重量为 W 时的情况，反向遍历最后一列，可以发现，如果第 `i-1` 列和最后一列的值相等，就证明第 `i-1` 个物品没有被选取，否则被选取，然后再跳跃到对应的列
 
 ```python
+res = dp[N][W]   # res 为最后的结果
 for i in range(n, 0, -1):
 	if res <= 0:
 		break
@@ -12926,7 +12992,7 @@ def solve(arr):
 
 假设有一组工作、deadline 和利润，请问如何安排工作使得利润最大化，每个工作所需的时间为1。
 
-划分一组时隙，每组时隙对应一个工作，将工作按照利润从大到小排好，遍历工作和 deadline，然后从截至日期向前搜索一个未安排工作的时隙
+划分一组时隙，每组时隙对应一个工作，将工作按照利润从大到小排好，遍历工作和 deadline，然后从截止日期向前搜索一个未安排工作的时隙
 
 ```python
 def JobSequencing(id, deadline, profit):
@@ -13043,7 +13109,7 @@ def smallestNumber(s, d):
 			res = f"{s}" + res
 			s = 0
 	
-	if s != 0:
+	if s != 0:  # 如果剩余的超过了位数能存放的范围，放到第一位
 		res = f"{s+1}" + res
 	else:
 		res = "1" + res
@@ -13148,7 +13214,7 @@ def minPatches(nums: List[int], n: int) -> int:
 	total = 0
 	cnt = 0
 	idx = 0
-	while total < n:
+	while total < n:   # 此处只需要在total<n时执行，因为当 total==n 时已经满足条件了
 		if idx < len(nums) and total >= nums[idx] - 1:
 			total += nums[idx]
 			idx += 1
@@ -13349,7 +13415,7 @@ def maxProduct(nums: List[int]) -> int:
 	n = len(nums)
 	for i in range(1, n):
 		xv, nv = maxv, minv
-		maxv = max(xv * nums[i], nums[i], nv * nums[i] )
+		maxv = max(xv * nums[i], nums[i], nv * nums[i])
 		minv = min(nv * nums[i], nums[i], xv * nums[i])
 		ans = max(maxv, ans)
 
@@ -13484,7 +13550,7 @@ def cutRod(price):
 
 带权重的爬楼问题 [Minimum cost to reach the top of the floor by climbing stairs - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-cost-to-reach-the-top-of-the-floor-by-climbing-stairs/)
 
-`s[n] = cost[n] + min(s[n-1), s[n-2])`
+`s[n] = cost[n] + min(s[n-1], s[n-2])`
 
 ```python
 def solve(cost):
@@ -13596,7 +13662,7 @@ def lcs_dp2(s1, s2):
 
 参考最长公共子字符串的求法
 
-`dp[i][j]` 为 `s1[0..i]` 和 `s2[0..j]` 之间的删除和
+`dp[i][j]` 为 `s1[0:i]` 和 `s2[0:j]` 之间的删除和
 
 ```python
 def minimumDeleteSum(s1: str, s2: str) -> int:
@@ -13616,7 +13682,7 @@ def minimumDeleteSum(s1: str, s2: str) -> int:
 			if s1[i-1] == s2[j-1]:
 				dp[i][j] = dp[i-1][j-1]
 			else:
-			# 选择删除 s1 中第 i-1 个字符，或者删除 s2 中第 j-1 个字符
+			    # 选择删除 s1 中第 i-1 个字符，或者删除 s2 中第 j-1 个字符
 				dp[i][j] = min(dp[i-1][j] + ord(s1[i-1]), dp[i][j-1] + ord(s2[j-1]))
 	return dp[n1][n2]
 ```
@@ -13628,6 +13694,7 @@ def minimumDeleteSum(s1: str, s2: str) -> int:
 
 给定一段绳子，将其切分为 x, y, z 的组合，不能有剩余。注意必须要切分为 x, y, z 这种形式，求切分的最大数量
 
+为了保证不会出现剩余，对于无法切分的情况进行特殊标记，如设置为 -1，这样当分割到这种情况时可以避免计算
 
 ```python
 def segment(n, x, y, z):
@@ -13716,7 +13783,7 @@ def solve_s(s):
     max_len = 0
     n = len(s)
     stack = []
-    stack.append(-1)     # 处理第一个括号为右括号时的情况
+    stack.append(-1)     # 处理最开始的括号作为平衡括号和第一个括号为右括号时的情况
 
     for i in range(n):
         if s[i] == "(":
@@ -13942,7 +14009,7 @@ def solve(nums):
             stack.append(nums[i])
         else:
             lb = bisect_left(stack, nums[i])  # 找到大于等于nums[i]的位置
-            stack[lb] = nums[i]
+            stack[lb] = nums[i]  # 替换这个元素使得增长变得更慢
     return len(stack)
 ```
 
@@ -14010,7 +14077,6 @@ def longestSubsequence(arr, difference: int) -> int:
 当另一个信封的宽度和高度都比这个信封大的时候，这个信封就可以放进另一个信封里，如同俄罗斯套娃一样。
 
 请计算最多能有多少个信封能组成一组“俄罗斯套娃”信封（即可以把一个信封放到另一个信封里面）。
-
 
 首先需要对数组进行排序，排序的原则是首个元素按照大小顺序排列，第二个元素反向排列，排好之后。为了保证不超时，使用二分查找的方法根据第二个元素找到符合要求的子序列
 
@@ -14099,27 +14165,26 @@ def maxProfitRecur(jobs, ind, last, memo):
     if ind == len(jobs):
         return 0
 
-    # if the job can be taken
+    # 如果工作可选
     if jobs[ind][0] >= last:
 
-        # if the value is not calculated
         if memo[ind] == -1:
 
-            # take the job
+            # 选择这个工作
             memo[ind] = jobs[ind][2] + \
                 maxProfitRecur(jobs, ind + 1, jobs[ind][1], memo)
 
-            # leave the job and find max
+            # 尝试不选择该工作
             memo[ind] = max(memo[ind],
                       maxProfitRecur(jobs, ind + 1, last, memo))
 
         return memo[ind]
 
-    # if the job can't be taken
+    # 该工作不可选
     return maxProfitRecur(jobs, ind + 1, last, memo)
     
 def maxProfit(jobs):
-    # Sort the jobs based on start time
+    # 根据开始时间排序工作
     jobs.sort()
     memo = [-1] * len(jobs)
     return maxProfitRecur(jobs, 0, -1, memo)
@@ -14162,7 +14227,7 @@ def solve_dp(jobs):
 
 如果遇到`.`，直接匹配下一个字符，`dp[i][j] |= dp[i-1][j-1]`
 
-如果遇到字母，判断两个字母是否相等，`dp[i][j] != dp[i-1][j-1]`
+如果遇到字母，判断两个字母是否相等，`dp[i][j] |= dp[i-1][j-1]`
 
 ```python
 def isMatch(s: str, p: str) -> bool:
@@ -14321,8 +14386,6 @@ def solve(n, k):
 
 
 
-
-
 ### 回文子字符串计数
 
 [Palindrome Substrings Count - GeeksforGeeks](https://www.geeksforgeeks.org/count-palindrome-sub-strings-string/)
@@ -14385,7 +14448,7 @@ def solve(arr):
 
 [The Painter's Partition Problem - GeeksforGeeks](https://www.geeksforgeeks.org/painters-partition-problem/)
 
-该问题相当于求将数组顺序分成若干份，并求出每种分法中的最大值和最小值
+该问题相当于求将数组顺序分成若干份，并求出每种分法中的最大值的最小值
 
 ```python
 def minimizeTime(curr, n, arr, k):
@@ -14475,7 +14538,7 @@ def beautifulSubsets(self, nums: List[int], k: int) -> int:
 
 当不选择第 `i` 个元素：`f(i, 0)=f(i-1, 0)+f(i-1,1)`
 
-当选择第 `i` 个元素，由于只要索引不同，就认为是不同的子集，所以如果第 `i` 个元素有 $c_i$个相同的值，那么可选择的子集合数为 $2^{c_i}-1$
+当选择第 `i` 个元素，由于只要索引不同，就认为是不同的子集，所以如果第 `i` 个元素有 $c_i$ 个相同的值，那么可选择的子集合数为 $2^{c_i}-1$
 
 如果第 `i` 个元素和第 `i - 1` 个元素相差不为 k，则有
 
@@ -14524,7 +14587,7 @@ def beautifulSubsetsdp(nums, k: int) -> int:
 
 给定一个整数数组，可以对其中的一个元素 `num[i]` 删除，并且获得 `num[i]` 点分数，但是同时会默认删除 `num[i]-1` 和 `num[i]+1`，默认删除不会获得分数，请问怎么操作能使获得的分数最大。
 
-该问题可以转换为打家劫舍问题，即删除了 `num[i]` 就不能删除 `num[i]` 两边的元素，因此，可以先找到原数组的最大值，然后计算每个值在 `num`中出现的总和，这样形成的新数组可以按照打家劫舍的方法求解
+该问题可以转换为打家劫舍问题，即删除了 `num[i]` 就不能删除 `num[i]` 两边的元素，因此，可以先找到原数组的最大值，然后计算每个值在 `num` 中出现的总和，这样形成的新数组可以按照打家劫舍的方法求解
 
 ```python
 def deleteAndEarn(nums) -> int:
@@ -14763,7 +14826,6 @@ for d in map(int, s):
 	# 枚举所有字符组合
 	ans += sum(c1 * c2 for c1, c2 in zip(pre2, suf2)) 
 ```
-
 
 k = 5 时的计算过程基本类似，但是将更新前缀放在枚举字符组合之后
 
