--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -13294,6 +13294,61 @@ def solve_dp(cost):
 ```
 
 
+
+### 最后一块石头的重量Ⅱ
+
+[1049. 最后一块石头的重量 II - 力扣（LeetCode）](https://leetcode.cn/problems/last-stone-weight-ii/)
+
+有一堆石头，用整数数组 `stones` 表示。其中 `stones[i]` 表示第 `i` 块石头的重量。
+
+每一回合，从中选出**任意两块石头**，然后将它们一起粉碎。假设石头的重量分别为 `x` 和 `y`，且 `x <= y`。那么粉碎的可能结果如下：
+
+- 如果 `x == y`，那么两块石头都会被完全粉碎；
+- 如果 `x != y`，那么重量为 `x` 的石头将会完全粉碎，而重量为 `y` 的石头新重量为 `y-x`。
+
+最后，**最多只会剩下一块** 石头。返回此石头 **最小的可能重量** 。如果没有石头剩下，就返回 `0`。
+
+
+该题实际上是在求将数组分成两部分之后，使得两部分的差距最小，即求一半容量的背包装满时的重量
+
+```python
+def lastStoneWeightII(stones):
+	tot = sum(stones)
+	cap = tot // 2
+	dp = [[0] * (cap+1) for _ in range(len(stones)+1)]
+	
+	for i in range(1, len(stones)+1):
+		for j in range(1, cap+1):
+			if j >= stones[i-1]:
+				dp[i][j] = max(dp[i-1][j], dp[i-1][j - stones[i-1]] + stones[i-1])
+			else:
+				dp[i][j] = dp[i-1][j]
+
+	return tot - 2 * dp[-1][cap]
+```
+
+这里需要注意要有 i 这个维度，否则会出现塞入同一个石头的情况。
+
+如果需要删除 i 这个维度，需要注意容量需要从后向前遍历，否则 `dp[j-w]` 实际对应的是 `dp[i+1][j-w]`，从后向前遍历可以保证因果性
+
+```python
+def lastStoneWeightII(stones: List[int]):
+	tot = sum(stones)
+	cap = tot // 2
+	dp = [0] * (cap+1)
+	
+	for weight in stones:
+		for j in range(cap, weight-1, -1):
+			if j >= weight:
+				dp[j] = max(dp[j], dp[j - weight] + weight)
+
+	return tot - 2 * dp[cap]
+```
+
+
+
+
+
 ### 子集之和问题
 
 [Dynamic Programming - Subset Sum Problem](https://www.geeksforgeeks.org/subset-sum-problem-dp-25/#using-recursion-o2n-time-and-on-space)
