--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -278,6 +278,38 @@ def countDigitOne(n: int) -> int:
 ```
 
 
+
+### 重新排序得到 2 的幂
+
+[869. 重新排序得到 2 的幂 - 力扣（LeetCode）](https://leetcode.cn/problems/reordered-power-of-2/)
+
+该问题可以用回溯法解决，先得到所有可能的排列，再考虑每个数字是否为 2 的幂次，下面给出了判断 2 的幂次的简单方法
+
+```python
+def isPowerOfTwo(n: int) -> bool:
+    return (n & (n - 1)) == 0
+```
+
+第二种方法更加简单，假设数字的范围有所局限，那么符合条件的 2 的幂次不多。可以枚举所有的 2 的幂次，然后通过统计数字中每一位数字出现的次数和2的幂次中每一位数字出现的次数做对比即可得到答案
+
+```python
+def countDigits(n: int) -> Tuple[int]:
+    cnt = [0] * 10
+    while n:
+        cnt[n % 10] += 1
+        n //= 10
+    return tuple(cnt)
+
+# 计算所有可能的 2 的幂次
+powerOf2Digits = {countDigits(1 << i) for i in range(30)}
+
+class Solution:
+    def reorderedPowerOf2(self, n: int) -> bool:  # 判断是否在可能的幂次中
+        return countDigits(n) in powerOf2Digits
+
+```
+
+
 ## 位运算
 
 ### 小鼠和毒药问题
@@ -6208,6 +6240,174 @@ def permuteUnique(nums):
 这里的 `i > 0 and not visited[i-1] and nums[i] == nums[i-1]` 实际上保证了重复的元素可以按照顺序填入，必须前一个元素已经填入，该元素才能填入。
 
 
+### 给表达式添加运算符
+
+[282. 给表达式添加运算符 - 力扣（LeetCode）](https://leetcode.cn/problems/expression-add-operators/description/)
+
+该问题需要一边回溯，一边计算
+
+该问题如果不在回溯内部使用循环比较麻烦，需要额外传入当前值
+
+```python
+def addOperators(num: str, target: int) -> List[str]:
+	n = len(num)
+	ans = []
+
+	def backtrack(expr: List[str], i: int, res: int, mul: int):
+		if i == n:
+			if res == target:
+				ans.append(''.join(expr))
+			return
+		signIndex = len(expr)
+		if i > 0:
+			expr.append('')  # 占位，下面填充符号
+		val = 0
+		for j in range(i, n):  # 枚举截取的数字长度（取多少位）
+			if j > i and num[i] == '0':  # 数字可以是单个 0 但不能有前导零
+				break
+			val = val * 10 + int(num[j])
+			expr.append(num[j])
+			if i == 0:  # 表达式开头不能添加符号
+				backtrack(expr, j + 1, val, val)
+			else:  # 枚举符号
+				expr[signIndex] = '+'
+				backtrack(expr + ["+"] +, j + 1, res + val, val)
+				expr[signIndex] = '-'
+				backtrack(expr + ["-"], j + 1, res - val, -val)
+				expr[signIndex] = '*'
+				backtrack(expr + ["*"], j + 1, res - mul + mul * val, mul * val)
+		del expr[signIndex:]
+
+	backtrack([], 0, 0, 0)
+	return ans
+```
+
+
+
+### 划分为k个相等的子集
+
+[698. 划分为k个相等的子集 - 力扣（LeetCode）](https://leetcode.cn/problems/partition-to-k-equal-sum-subsets/description/)
+
+给定一个整数数组  `nums` 和一个正整数 `k`，找出是否有可能把这个数组分成 `k` 个非空子集，其总和都相等。
+
+
+首先计算总和，如果总和不能被 k 整除，那么肯定不能划分。然后对数组进行排序，方便剪枝。由于元素数量少，这里用一个数字来表示数组中哪些元素可选。
+
+```python
+def canPartitionKSubsets(nums, k: int) -> bool:
+	tot = sum(nums)
+	if tot % k != 0: return False
+	pre = tot // k
+	nums.sort()
+
+	# 要求非空集合，如果最后一位大于pre，则证明无法完全分成K个集合
+	if nums[-1] > pre: return False
+
+	n = len(nums)
+
+	@cache
+	def dfs(s, p):
+		if s == 0: return True
+		for i in range(n):
+			# 如果 nums[i] + p 大于目标值pre，则无法分割
+			if nums[i] + p > pre:
+				break
+			# p = (p + nums[i]) % pre，
+			# 如果 p + nums[i] 小于pre，那么继续找
+			# 如果 p + nums[i] 等于 pre，那么刚好置为0，找下一个集合
+			if (s >> i) & 1 and dfs(s ^ (1 << i), (p + nums[i]) % pre):
+				return True
+		return False
+	# 一开始全部位设置为1
+	return dfs((1 << n) - 1, 0)
+```
+
+
+该问题还可以用动态规划的方法解决，还是用数字 S 表示某个元素是否被使用，总共有 $2^n$ 种状态，令 `dp[S]` 表示状态为 S 时是否可行，初始化 `dp[0]` 为 True。并且使用一个数组来表示该状态下的和，判断是否满足要求
+
+```python
+def canPartitionKSubsets(nums, k: int) -> bool:
+	all = sum(nums)
+	if all % k:
+		return False
+	per = all // k
+	nums.sort()
+	if nums[-1] > per:
+		return False
+	n = len(nums)
+	dp = [False] * (1 << n)
+	dp[0] = True
+	cursum = [0] * (1 << n)
+	for i in range(0, 1 << n):
+		if not dp[i]:  # 找到一个可行的状态
+			continue
+		for j in range(n):
+			if cursum[i] + nums[j] > per:
+				break
+			if (i >> j & 1) == 0:  # 如果第 j 个元素可用
+				next = i | (1 << j)  # 检查可行状态的前一个状态，将其设置为可行
+				if not dp[next]:
+					cursum[next] = (cursum[i] + nums[j]) % per
+					dp[next] = True
+	return dp[(1 << n) - 1]
+```
+
+
+### 完成所有工作的最短时间
+
+[1723. 完成所有工作的最短时间 - 力扣（LeetCode）](https://leetcode.cn/problems/find-minimum-time-to-finish-all-jobs/description/)
+
+给你一个整数数组 `jobs` ，其中 `jobs[i]` 是完成第 `i` 项工作要花费的时间。
+
+请你将这些工作分配给 `k` 位工人。所有工作都应该分配给工人，且每项工作只能分配给一位工人。工人的 **工作时间** 是完成分配给他们的所有工作花费时间的总和。请你设计一套最佳的工作分配方案，使工人的 **最大工作时间** 得以 **最小化** 。返回分配方案中尽可能 **最小** 的 **最大工作时间** 。
+
+该问题直接求解不好求，可以采用二分查找的方法，确定二分查找的上下界，对于查找的目标值 limit，如果存在一个方案使得所有的工人的工作时间都不超过limit，则证明该limit为可能的解。
+
+
+一个朴素的方案是，开辟一个大小为 k 的数组 `workloads`，`workloads[i]` 表示第 i 个工人的当前已经被分配的工作量，然后我们利用一个递归函数 `backtrack(i)` 递归地枚举第 i 个任务的分配方案，过程中实时地更新 `workloads` 数组。具体地，函数中我们检查每一个工人 j 当前已经被分配的工作量，如果被分配的工作量 `workloads[j]` 与当前工作的工作量 `jobs[i]` 之和不超过 limit 的限制，我们即可以将该工作分配给工人 j，然后计算下一个工作 `jobs[i+1]` 的分配方案。过程中一旦我们找到了一个可行方案，我们即可以返回 true，而无需枚举完所有的方案。
+
+```python
+def minimumTimeRequired(jobs, k: int) -> int:
+	def dfs(jobs, workloads, idx, limit):
+		if idx >= n: return True
+		curr = jobs[idx]
+		for i in range(k):
+			if workloads[i] + curr <= limit:
+				workloads[i] += curr
+				if dfs(jobs, workloads, idx+1, limit):
+					return True
+				workloads[i] -= curr
+			# 如果当前工人未分配工作，那么下一个工人必然未被分配工作
+			# workloads[i] 为0，可能是因为limit过小
+			# 或者当前工作恰使该工人工作量达到上限
+			# 这两种情况都无需继续尝试分配工作
+			if workloads[i] == 0 or workloads[i] + curr == limit:
+				break
+		return False
+	
+	def check(jobs, k, limit):
+		workloads = [0] * k   # k 个工人对应的工作量
+		return dfs(jobs, workloads, 0, limit)
+	
+	n = len(jobs)
+	ans = 10 ** 9
+	jobs.sort(reverse=True)  # 从大到小分配，先分配大的更加容易
+	l, r = jobs[0], sum(jobs)
+
+	while l <= r:
+		mid = l + (r - l) // 2
+		if check(jobs, k, mid):
+			ans = mid
+			r = mid - 1
+		else:
+			l = mid + 1
+	return l
+```
+
+
+该问题也能用动态规划解决，不过感觉比较麻烦
+
+
 ### 反转队列
 
 [Reversing a queue using recursion - GeeksforGeeks](https://www.geeksforgeeks.org/reversing-queue-using-recursion/)
@@ -10881,6 +11081,17 @@ def findMinHeightTrees(n: int, edges: List[List[int]]):
 ```
 
 
+### 子序列数量之差
+
+[研究red子序列的红_牛客题霸_牛客网](https://www.nowcoder.com/practice/804f995a0795419c832e1ea8e2a2aa06?tpId=37&tqId=43287&rp=1&sourceUrl=%2Fexam%2Foj%2Fta%3FtpId%3D37&difficulty=undefined&judgeStatus=undefined&tags=&title=)
+
+两个长度为 `n` 的字符串 s，t，仅包含小写字母，下标从 1 开始。每次会进行一个操作，把 $s_i$ 和 $t_i$​ 交换，给出每一次交换后字符串 s 中的 "red" 子序列和 t 中 "red" 的子序列的数量之差。
+
+
+本题需要求解的是两个字符串中的 "red" 子序列（包括 "r"，"e"，"d"，"re"，"ed"和"red"）的数量的差距。
+
+该题通过线段树解决，线段树需要维护区间内 "red" 子序列的数量。对于 "r"、"e" 和 "d" 而言，直接是左右区间的数量相加。对于 "re"，则为左右区间的 "re" 数量之和，再加上左区间的 "r" 和右区间的 "e" 的数量相乘
+
 
 ## 堆
 
@@ -13231,6 +13442,8 @@ def minPatches(nums: List[int], n: int) -> int:
 
 动态规划问题重要的是状态和转移，建立状态之间的关系
 
+题目中如果提到连续，那么如果不满足条件就直接重置（如置为0），但是如果没提到连续，只是要求相对位置不改变，不满足条件时，可以考虑前一个状态或者后一个状态的最大值或最小值
+
 
 
 ### 数的组合
@@ -13511,7 +13724,7 @@ def solve(s1, s2):
 ```
 
 
-动态规划，需要注意初始化边界条件
+动态规划，需要注意初始化边界条件，`dp[i][j]` 表示 `s1[0:i]` 和 `s2[0:j]` 之间的编辑距离
 
 ```python
 def solve_dp(s1, s2):
@@ -13532,9 +13745,14 @@ def solve_dp(s1, s2):
             if s1[i-1] == s2[j-1]:
                 dp[i][j] = dp[i-1][j-1]
             else:
+	            # dp[i-1][j-1] 代表修改 s1 的第 i 个字符
+	            # dp[i][j-1] 近似增加 s1 的第 i 个字符，
+	            # dp[i-1][j] 表示删除 s1 的第 i 个字符
                 dp[i][j] = 1 + min(dp[i-1][j-1], dp[i][j-1], dp[i-1][j])
     return dp[n1][n2]
 ```
+
+
 
 ### 切木头问题
 
@@ -13853,6 +14071,41 @@ def solve_s(s):
 ```
 
 
+### 最长的斐波那契子序列的长度
+
+[873. 最长的斐波那契子序列的长度 - 力扣（LeetCode）](https://leetcode.cn/problems/length-of-longest-fibonacci-subsequence/description/)
+
+在一个严格递增数组中找到最长的斐波那契数列
+
+使用动态规划，令 `dp[i][j]` 表示以 `arr[i]` 和 `arr[j]` 结尾的斐波那契数列的长度，可以遍历数组确定最后一个数 k，然后用两个指针找到前面两个数 i 和 j，最后可以更新 `dp[j][k] = dp[i][j] + 1`
+
+```python
+def lenLongestFibSubseq(arr):
+	n = len(arr)
+
+	dp = [[0 for _ in range(n)] for _ in range(n)]
+	max_len = 0
+	for k in range(2, n):
+		i, j = 0, k - 1
+		while i < j:
+			s = arr[i] + arr[j]
+			if s == arr[k]:
+				dp[j][k] = max(dp[j][k], dp[i][j]+1)
+				max_len = max(max_len, dp[j][k])
+				i += 1
+				j -= 1
+			elif s > arr[k]:
+				j -= 1
+			else:
+				i += 1
+	if max_len == 0:
+		return 0
+	else:
+		return max_len + 2
+```
+
+
+
 
 ### 卡特兰数
 
@@ -14133,7 +14386,10 @@ def longestSubsequence(arr, difference: int) -> int:
 
 请计算最多能有多少个信封能组成一组“俄罗斯套娃”信封（即可以把一个信封放到另一个信封里面）。
 
-首先需要对数组进行排序，排序的原则是首个元素按照大小顺序排列，第二个元素反向排列，排好之后。为了保证不超时，使用二分查找的方法根据第二个元素找到符合要求的子序列
+首先需要对数组进行排序，排序的原则是宽度按照大小顺序排列，高度反向排列，排好之后。高度需要反向排是因为宽度已经排好，因此只需要比较高度，对于宽度相同的信封只能选择一个。由于高度反向排，因此首先选择的是最大高度的信封，这样其它信封就不会被选择了。如果高度也正向排，就会出现选择多个宽度相同的信封。
+
+
+为了保证不超时，使用二分查找的方法根据第二个元素找到符合要求的子序列
 
 ```python
 def maxEnvelopes(envelopes: List[List[int]]) -> int:
@@ -14144,9 +14400,10 @@ def maxEnvelopes(envelopes: List[List[int]]) -> int:
 	n = len(envelopes)
 	stack = [envelopes[0][1]]
 	for i in range(1, n):
-		if stack[-1] < envelopes[i][1]:
+		# 由于高度反向排，如果高度更大，证明遇到了一个新的宽度的信封
+		if stack[-1] < envelopes[i][1]:   
 			stack.append(envelopes[i][1])
-		else:
+		else: # 如果有高度更小的信封可以选择
 			idx = bisect_left(stack, envelopes[i][1])  # 找到更小的元素对应的位置
 			stack[idx] = envelopes[i][1]
 	return len(stack)
