--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -3055,6 +3055,25 @@ def sortColors(nums: List[int]):
 ```
 
 
+另外一种方法考虑用两个指针 `p0` 和 `p2` 分别指向 0 和 2 对应的位置，从左到右遍历数组，如果遇到 2，就将其交换到 `p2` 对应的位置，同时 `p2+1`，但是此时交换过去的仍然可能是2 或者 0，因此需要连续交换直到不为2，然后判断是否为0，如果是0，将其交换到 `p0` 对应的位置
+
+```python
+def sortColors(nums: List[int]) -> None:
+	n = len(nums)
+	p0 = 0
+	p2 = n - 1
+	i = 0
+	while i <= p2:
+		while i <= p2 and nums[i] == 2:
+			nums[i], nums[p2] = nums[p2], nums[i]
+			p2 -= 1
+		if nums[i] == 0:
+			nums[i], nums[p0] = nums[p0], nums[i]
+			p0 += 1
+		i += 1
+```
+
+
 ### 煎饼排序
 
 [969. 煎饼排序 - 力扣（LeetCode）](https://leetcode.cn/problems/pancake-sorting/description/)
@@ -4416,6 +4435,45 @@ def maxSumWithK(arr, k):
 
     return ans
 ```
+
+
+### 替换后的最长重复字符
+
+[424. 替换后的最长重复字符 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-repeating-character-replacement/description/)
+
+给定一个字符串 `s` 和一个整数 `k` 。你可以选择字符串中的任一字符，并将其更改为任何其他大写英文字符。该操作最多可执行 `k` 次。在执行上述操作后，返回包含相同字母的最长子字符串的长度。
+
+解决方法为用一个滑动窗口找到一个序列包含了一个序列，该序列中包括了一些重复的数据，和一些不同的数据，如果这些不同数据的数量小于 k，那么还可以继续，如果已经大于k了，就移动左边界。这里需要维护一个当前窗口中最多元素对应的数量 maxv，当移动左边界时，此时无需更新 maxv，因为如果右边界的元素正好是左边界的元素，那么无需更新，如果左边界移除以后，使得此时 maxv 的值变小，右边界如果读到了不是刚才移出左边界的字符，新的子串要想在符合题意的条件下变得更长，maxv 一定要比之前的值还要更多，因此不会错过更优的解。
+
+
+```python
+def characterReplacement(s: str, k: int) -> int:
+	n = len(s)
+	ans = 0
+	window = defaultdict(int)
+	r = 0
+	maxv = 0
+	for l in range(n):
+		while r < n:
+			window[s[r]] += 1
+			if window[s[r]] > maxv:
+				maxv = window[s[r]]
+			if r - l + 1 - maxv > k:
+				window[s[r]] -= 1   # 撤销之前加的值
+				break
+			else:
+				ans = max(ans, r - l + 1)
+				r += 1
+		if n - l + 1 <= ans:
+			break
+		window[s[l]] -= 1
+		# maxv = 0
+		# for key in window.keys():
+		#     maxv = max(maxv, window[key])
+	return ans
+```
+
+
 
 
 ## 前缀和
@@ -5979,6 +6037,12 @@ def findSubstring(s, words):
 [214. 最短回文串 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-palindrome/description/)
 
 用 KMP 做的
+
+
+### 最长重复子串
+
+[1044. 最长重复子串 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-duplicate-substring/)
+
 
 
 ### 删除无效括号
@@ -11092,6 +11156,103 @@ def findMinHeightTrees(n: int, edges: List[List[int]]):
 
 该题通过线段树解决，线段树需要维护区间内 "red" 子序列的数量。对于 "r"、"e" 和 "d" 而言，直接是左右区间的数量相加。对于 "re"，则为左右区间的 "re" 数量之和，再加上左区间的 "r" 和右区间的 "e" 的数量相乘
 
+```python
+import sys
+
+
+class Node:
+    def __init__(self, l, r) -> None:
+        self.l = l
+        self.r = r
+        self.cnts = [0] * 6
+
+    def clear(self):
+        self.cnts[0] = 0
+        self.cnts[1] = 0
+        self.cnts[2] = 0
+
+
+class SegTree:
+    def __init__(self, n) -> None:
+        self.n = n
+        # 最坏情况为满二叉树
+        self.seg = [Node(0, 0) for _ in range(n * 4)]
+	# 建树
+    def build(self, s, node, l, r):
+        self.seg[node].l = l
+        self.seg[node].r = r
+        if l == r:
+            self.seg[node].clear()
+            if s[l] == "r":
+                self.seg[node].cnts[0] = 1
+            elif s[l] == "e":
+                self.seg[node].cnts[1] = 1
+            elif s[l] == "d":
+                self.seg[node].cnts[2] = 1
+            return
+        m = l + (r - l) // 2
+        self.build(s, node * 2, l, m)
+        self.build(s, node * 2 + 1, m + 1, r)
+        self.merge(node)
+	# 合并树
+    def merge(self, node):
+        left = self.seg[node * 2]
+        right = self.seg[node * 2 + 1]
+        self.seg[node].cnts[0] = left.cnts[0] + right.cnts[0]
+        self.seg[node].cnts[1] = left.cnts[1] + right.cnts[1]
+        self.seg[node].cnts[2] = left.cnts[2] + right.cnts[2]
+        self.seg[node].cnts[3] = (
+            left.cnts[3] + right.cnts[3] + left.cnts[0] * right.cnts[1]
+        )
+        self.seg[node].cnts[4] = (
+            left.cnts[4] + right.cnts[4] + left.cnts[1] * right.cnts[2]
+        )
+        self.seg[node].cnts[5] = (
+            left.cnts[5] + right.cnts[5]
+            + left.cnts[0] * right.cnts[4]
+            + left.cnts[3] * right.cnts[2]
+        )
+    # 更新树
+    def update(self, node, pos, val):
+        if self.seg[node].l == self.seg[node].r and self.seg[node].l == pos:
+            self.seg[node].clear()
+            if val == 'r': self.seg[node].cnts[0] += 1
+            elif val == 'e': self.seg[node].cnts[1] += 1
+            elif val == 'd': self.seg[node].cnts[2] += 1
+            return
+        
+        m = (self.seg[node].l + self.seg[node].r) // 2
+        if pos <= m:
+            self.update(node * 2, pos, val)
+        else:
+            self.update(node*2 + 1, pos, val)
+        self.merge(node)
+
+n, q = map(int, input().split())
+str1 = input()
+str2 = input()
+
+tr1 = SegTree(n)
+tr2 = SegTree(n)
+
+tr1.build(str1, 1, 0, n-1)
+tr2.build(str2, 1, 0, n-1)
+
+poss = []
+
+for _ in range(q):
+    x = int(input()) - 1
+    poss.append(x)
+
+for p in poss:
+    tr1.update(1, p, str2[p])
+    tr2.update(1, p, str1[p])
+
+    str1, str2 = str1[:p] + str2[p] + str1[p+1:], str2[:p] + str1[p] + str2[p+1:]
+    print(tr1.seg[1].cnts[5] - tr2.seg[1].cnts[5])
+```
+
+
 
 ## 堆
 
@@ -12683,6 +12844,12 @@ def pacificAtlantic(self, heights) -> List[List[int]]:
 ```
 
 
+该问题还有类似的变体 [130. 被围绕的区域 - 力扣（LeetCode）](https://leetcode.cn/problems/surrounded-regions/description/)
+
+这个问题求被 `X` 围绕的 `O`，直接求不好求。可以转换为求哪些 `O` 与边界相连，即从边界的 `O` 出发能到达哪些 `O`。能被访问到的 `O` 不用变，不能被访问到的 `O` 改为 `X`
+
+
+
 ### 找到小镇的法官
 
 [997. 找到小镇的法官 - 力扣（LeetCode）](https://leetcode.cn/problems/find-the-town-judge/description/)
@@ -13436,6 +13603,81 @@ def minPatches(nums: List[int], n: int) -> int:
 ```
 
 
+### 优势洗牌
+
+[870. 优势洗牌 - 力扣（LeetCode）](https://leetcode.cn/problems/advantage-shuffle/description/)
+
+给定两个长度相等的数组 `nums1` 和 `nums2`，`nums1` 相对于 `nums2` 的优势可以用满足 `nums1[i] > nums2[i]` 的索引 `i` 的数目来描述。
+
+返回 `nums1` 的任意排列，使其相对于 `nums2` 的优势最大化
+
+该题可以用类似田忌赛马的思想解决，如果 `num2` 中最大的元素小于等于 `num1` 中最大元素，那么将 `num2` 中最小的元素和 `num1` 中最大元素进行配对，如果`num2` 中最大的元素大于 `num1` 中最大元素，那么直接用最大元素和 `num1` 中最大元素配对
+
+```python
+def advantageCount(nums1: List[int], nums2: List[int]) -> List[int]:
+	n = len(nums1)
+	res = [0] * n
+	pos = defaultdict(list)
+	for i in range(n):
+		pos[nums2[i]].append(i)
+	nums2.sort()
+	nums1.sort()
+	n1l, n1r, n2r = 0, n - 1, n-1
+	i = 0
+	while i < n:
+		if nums1[n1r] > nums2[n2r]:
+			num1 = nums1[n1r]
+			num2 = nums2[n2r]
+			idx = pos[num2].pop()
+			res[idx] = num1
+			n1r -= 1
+			n2r -= 1
+		else:
+			num1 = nums1[n1l]
+			num2 = nums2[n2r]
+			idx = pos[num2].pop()
+			res[idx] = num1
+			n1l += 1
+			n2r -= 1
+		i += 1
+	return res
+```
+
+
+### 分发糖果
+
+[135. 分发糖果 - 力扣（LeetCode）](https://leetcode.cn/problems/candy/description/)
+
+`n` 个孩子站成一排。给你一个整数数组 `ratings` 表示每个孩子的评分。
+
+你需要按照以下要求，给这些孩子分发糖果：
+
+- 每个孩子至少分配到 `1` 个糖果。
+- 相邻两个孩子评分更高的孩子会获得更多的糖果。
+
+请你给每个孩子分发糖果，计算并返回需要准备的 **最少糖果数目** 。
+
+可以将相邻两个孩子评分更高的孩子会获得更多的糖果分成左边孩子评分更高和右边孩子评分更高。这样使用两次循环实现，先正向遍历，如果比左侧更大就在左侧元素的基础上加1，再反向遍历如果右侧+1大于目前元素，就重新赋值。
+
+```python
+def candy(ratings: List[int]) -> int:
+	n = len(ratings)
+	candies = [1] * n
+
+	for i in range(1, n):
+		if ratings[i] > ratings[i-1]:
+			candies[i] = candies[i-1] + 1
+	
+	tot = candies[n-1]
+	for i in range(n-2, -1, -1):
+		if ratings[i] > ratings[i+1]:
+			candies[i] = max(candies[i], candies[i+1] + 1)
+		tot += candies[i]
+	return tot
+```
+
+
+
 ## 动态规划
 
 一般如果一个问题要求最大化或者最小化特定数量或者是计数，或是存在重叠子问题，都可以通过动态规划来解决。
@@ -13559,7 +13801,27 @@ def lastStoneWeightII(stones: List[int]):
 ```
 
 
+### 将一个数字表示成幂的和的方案数
 
+[2787. 将一个数字表示成幂的和的方案数 - 力扣（LeetCode）](https://leetcode.cn/problems/ways-to-express-an-integer-as-sum-of-powers/description/)
+
+给定两个正整数 `n` 和 `x`，求将`n` 表示成一些互不相同正整数的 `x` 次幂之和的方案数。
+
+该问题实际上是背包问题，求背包的不同方案数
+
+```python
+def numberOfWays(n: int, x: int) -> int:
+	dp = [0] * (n+1)
+	dp[0] = 1
+
+	for i in range(1, n + 1):
+		v = i ** x
+		if v > n: break
+		for s in range(n, v-1, -1):
+			dp[s] += dp[s - v]
+			dp[s] %= 1_000_000_007
+	return dp[n]
+```
 
 
 ### 子集之和问题
