--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -6036,13 +6036,107 @@ def findSubstring(s, words):
 
 [214. 最短回文串 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-palindrome/description/)
 
-用 KMP 做的
+给定一个字符串 s，你可以通过在字符串前面添加字符将其转换为回文串。找到并返回可以用这种方式转换的最短回文串。
+
+首先添加的字符串 `s'` 的长度一定小于原本的字符串长度，因为可以去除第一个字符后反转再添加回去得到一个回文串。这样可以将 s 分为两部分，首先是长度为 $|s|-|s'|$ 的前缀 $s_1$，以及长度为 $|s'|$ 的后缀 $s_2$。由于 $s'+s$ 是一个回文串，那么 $s'$ 的反序就必然与 $s_2$ 相同。也就是说，需要找到一个最长的 $s_1$ 满足是回文串，这样剩余部分便为 $s_2$。
+
+为了计算回文串，可以使用Rabin-Karp算法，回文字符串的哈希相同（忽略哈希碰撞的问题）
+
+```python
+def shortestPalindrome(s: str) -> str:
+	n = len(s)
+	base, mod = 131, 10**9 + 7
+	left = right = 0
+	mul = 1
+	best = -1
+	
+	for i in range(n):
+		left = (left * base + ord(s[i])) % mod    # 分别从两边开始算
+		right = (right + mul * ord(s[i])) % mod
+		if left == right:
+			best = i
+		mul = mul * base % mod
+	
+	add = ("" if best == n - 1 else s[best+1:])
+	return add[::-1] + s
+```
 
 
 ### 最长重复子串
 
 [1044. 最长重复子串 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-duplicate-substring/)
 
+给你一个字符串 `s` ，考虑其所有重复子串：即 `s` 的（连续）子串，在 `s` 中出现 2 次或更多次。这些出现之间可能存在重叠。返回任意一个可能具有最长长度的重复子串
+
+该问题可以用二分查找搜索最长长度，范围为 `[0, n-1]`。为了高效判断 s 中是否有长度为 L 的重复子串，因此可以用 Rabin-Karp 算法对固定长度的字符串进行编码。在 s 中 n−L+1 个长度为 L 的子串中，有两个子串的编码相同时，则说明存在长度为 L 的重复子串。首先对 s 的每个字符进行编码，得到一个数组 arr，将子串看成一个 26 进制的数，如 abc 编码为 $0 * 26^2 + 1 * 26 + 2 * 26^0 = 28$。当 L 很长时，需要取模，但是这样会造成哈希碰撞，为了避免碰撞，使用双哈希，即用两套进制和模的组合，来对字符串进行编码。只有两种编码都相同时，我们才认为字符串相同。
+
+```python
+def longestDupSubstring(s: str) -> str:
+	# 生成两个进制和两个模
+	a1, a2 = random.randint(26, 100), random.randint(26, 100)
+	mod1, mod2 = random.randint(10**9+7, 2**31-1), \
+	 random.randint(10**9+7, 2**31-1)
+
+	# 检查是否存在长度为m的重复字符串
+	def check(arr, m):
+		n = len(arr)
+		aL1, aL2 = pow(a1, m, mod1), pow(a2, m, mod2)
+		h1, h2 = 0, 0
+		for i in range(m):  # 计算字符串的哈希
+			h1 = (h1 * a1 + arr[i]) % mod1
+			h2 = (h2 * a2 + arr[i]) % mod2
+		
+		seen = {(h1, h2)}
+
+		for ss in range(1, n-m+1):
+			h1 = (h1 * a1 - arr[ss - 1] * aL1 + arr[ss+m-1]) % mod1
+			h2 = (h2 * a2 - arr[ss - 1] * aL2 + arr[ss+m-1]) % mod2
+
+			if (h1, h2) in seen:
+				return ss
+			seen.add((h1, h2))
+		return -1
+
+	n = len(s)
+	arr = [ord(c) - ord("a") for c in s]
+	l, r = 1, n - 1
+	length, start = 0, -1
+	while l <= r:
+		m = l + (r - l) // 2
+		idx = check(arr, m)
+		if idx != -1:
+			l = m + 1
+			length = m
+			start = idx
+		else:
+			r = m - 1
+	return s[start: start+length] if start != -1 else ""
+```
+
+
+此外还有基于 KMP 的解法
+
+```python
+def shortestPalindrome(s: str) -> str:
+	n = len(s)
+	fail = [-1] * n
+	for i in range(1, n):
+		j = fail[i - 1]
+		while j != -1 and s[j + 1] != s[i]:
+			j = fail[j]
+		if s[j + 1] == s[i]:
+			fail[i] = j + 1
+	
+	best = -1
+	for i in range(n - 1, -1, -1):
+		while best != -1 and s[best + 1] != s[i]:
+			best = fail[best]
+		if s[best + 1] == s[i]:
+			best += 1
+
+	add = ("" if best == n - 1 else s[best+1:])
+	return add[::-1] + s
+```
 
 
 ### 删除无效括号
@@ -9988,6 +10082,40 @@ def solve(root):
         if root.right:
             dfs(root.right)
     dfs(root)
+```
+
+
+### 有序链表转换二叉搜索树
+
+[109. 有序链表转换二叉搜索树 - 力扣（LeetCode）](https://leetcode.cn/problems/convert-sorted-list-to-binary-search-tree/description/)
+
+这里需要使用快慢指针找到中点，不过这里需要注意一下，需要找到中点的前一个节点，因此快慢指针有需要特殊的写法
+
+```python
+def sortedListToBST(head):
+	def dfs(head):
+		if head is None:
+			return None
+		if head.next is None:  # 处理单个节点
+			return TreeNode(head.val)
+		
+		slow, fast = head, head.next
+
+		while fast is not None and fast.next is not None:
+			fast = fast.next.next
+			if fast is None:  # 这里需要提前中止，便于将中点单独拿出来
+				break
+			slow = slow.next
+		
+		next = slow.next
+		slow.next = None
+		root = TreeNode(next.val)
+		
+		root.left = dfs(head)
+		root.right = dfs(next.next)
+		return root
+	root = dfs(head)
+	return root
 ```
 
 
